config/prow/cluster/gcsweb_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gcsweb
  namespace: gcsweb
  labels:
    app: gcsweb
  annotations:
    cert.gardener.cloud/issuer: ci-issuer
    cert.gardener.cloud/purpose: managed
    dns.gardener.cloud/class: garden
    dns.gardener.cloud/dnsnames: gcsweb.prow.gardener.cloud
spec:
  rules:
  - host: gcsweb.prow.gardener.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gcsweb
            port:
              number: 80
  tls:
  - hosts:
    - gcsweb.prow.gardener.cloud
    secretName: gcsweb-ingress-tls
